syntax = "proto3";

package proxyapi;

enum EOpCode {
	EOPCODE_INVAILD = 0;				// 无效协议
	EOPCODE_REGISTE_REQ = 1;			// 注册服务请求
	EOPCODE_REGISTE_RSP = 2;			// 注册服务应答
	EOPCODE_HEARTBEAT_REQ = 3;			// 心跳请求
	EOPCODE_HEARTBEAT_RSP = 4;			// 心跳应答
	EOPCODE_TRANSMIT = 5;				// 传输数据
}

enum EErrno {
	EERRNO_SUCC = 0;					// 成功
	EERRNO_FAIL = 1;					// 失败
	EERRNO_DUPLICATE = 2;				// 重复注册
}

// 转发类型
enum ETransmitType {
	Broadcast = 0;	// 广播
	Poll = 1;		// 轮询
}

enum EPackType {
	Request = 0;
	Response = 1;
}
message SHead {
    EOpCode Msgid = 1;				// 消息ID
	uint64 Sync = 2;				// 透传信息
	EErrno Errcode = 3;				// 错误码(应答消息有效，请求消息和通知消息无效)
	TargetSvr Target = 4;			// 如果消息id是EOPCODE_TRANSMIT，本字段有效，记录要发送到的服务器
	EPackType Type = 5;				// 消息类型，请求还是应答
}

message TargetSvr {
	ETransmitType type = 1;
	string name = 2;
	int32 zone = 3;
	int32 id = 4;
}

message RegistReq {
	string Name = 1;
	int32 Zone = 2;
	int32 Id = 3;
}

message RegistRsp {

}

message HeartBeatReq {
	
}

message HeartBeatRsp {

}